Fix start page steps z-index

--- a/app/assets/stylesheets/pages/projects/start.sass
+++ b/app/assets/stylesheets/pages/projects/start.sass
@@ -10,6 +10,7 @@
       font-size: 190%
       font-weight: 500
   .steps
+    z-index: 1
     position: relative
     text-align: center
     padding-bottom: +emCalc(30px)
